Fixed overlapping css on services page.

--- a/services.css
+++ b/services.css
@@ -164,7 +164,12 @@
     display: block;
 }
 main h1 {
+    color: black;
+}
+
+article h1 {
     text-align: center;
+    color: var(--red);
 }
 main p {
     text-align: center;
